Basic project skeleton

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <artifactId>extentreports</artifactId>
             <version>4.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
