--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,18 @@
             <version>6.14.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
